// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Panel snapshots > should render Panel 1`] = `
<DocumentFragment>
  <div
    class="Panel"
    data-test-color-picker-panel=""
  >
    <div
      class="Panel__header"
    >
      <div
        class="Tabs"
        data-test-tabs=""
      >
        <div
          active=""
          class="Tabs__tab Tabs__tab--active Tabs__tab--disabled"
          data-test-tab="custom"
        >
          Custom
        </div>
      </div>
      <div
        class="Icon Icon--clickable"
        data-test-icon="close"
        height="11"
        name="Close"
        width="11"
      />
    </div>
    <div
      class="ant-color-picker-slider-container"
    />
    <div
      class="Panel__sampler"
    >
      <div
        class="ButtonIcon"
        data-test-button-icon="sampler"
        data-test-tooltip=""
      >
        <div
          class="Icon Icon--neutral-1"
          data-test-icon="sample"
          height="12"
          name="Sample"
          width="12"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Panel snapshots > should render with active sampler 1`] = `
<DocumentFragment>
  <div
    class="Panel"
    data-test-color-picker-panel=""
  >
    <div
      class="Panel__header"
    >
      <div
        class="Tabs"
        data-test-tabs=""
      >
        <div
          active=""
          class="Tabs__tab Tabs__tab--active Tabs__tab--disabled"
          data-test-tab="custom"
        >
          Custom
        </div>
      </div>
      <div
        class="Icon Icon--clickable"
        data-test-icon="close"
        height="11"
        name="Close"
        width="11"
      />
    </div>
    <div
      class="ant-color-picker-slider-container"
    />
    <div
      class="Panel__sampler"
    >
      <div
        class="ButtonIcon ButtonIcon--selected"
        data-test-button-icon="sampler"
        data-test-tooltip=""
      >
        <div
          class="Icon Icon--blue-1"
          data-test-icon="sample"
          height="12"
          name="Sample"
          width="12"
        />
      </div>
      <div
        class="ColorSampler"
        style="left: 15px; top: 15px;"
      >
        <div
          class="ColorGridMask"
          data-test-button="color-sampler"
        />
        <div
          class="ColorGrid"
        >
          <div
            class="ColorGrid__color-grid"
          />
          <div
            class="ColorGrid__picker-target-color"
          />
          <div
            class="ColorGrid__loader"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1cj4ms"
            >
              <span
                class="ant-spin-dot-holder"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
